# Shopee-SC-ListingPort

./: CLAUDE.md  README.md  index.html  mass_update_media_info_2051980_20260405231634.xlsx  mass_update_sales_info_2051980_20260405231511.xlsx  mass_update_shipping_info_2051980_20260405231549.xlsx  pitch.html  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
config/: markets.json
config/category_mappings/: my_to_sg.json
samples/: Shopee_mass_upload_2026-04-05_basic_template.xlsx  mass_update_basic_info_2051980_20260405231315.xlsx  mass_update_dts_info_2051980_20260405231621.xlsx
src/shopee_transfer/: __init__.py  cli.py  config.py  currency.py  mapper.py  models.py  reader.py  writer.py
src/shopee_transfer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shopee_transfer/web/: app.py  styles.py
tests/: test_config.py  test_currency.py  test_mapper.py  test_reader.py  test_styles.py  test_web_app.py  test_writer.py
